--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "zendframework/zend-config": "~2.3",
         "zendframework/zend-http": "~2.3",
-        "firebase/php-jwt": "dev-master"
+        "firebase/php-jwt": "dev-master",
+        "geoip2/geoip2": "~2.0"
     }
 }
