--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "zendframework/zend-config": "~2.3",
         "zendframework/zend-http": "~2.3",
         "firebase/php-jwt": "dev-master",
-        "geoip2/geoip2": "~2.0"
+        "geoip2/geoip2": "~2.0",
+        "facebook/graph-sdk": "^5.6"
     }
 }
