--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "zendframework/zend-http": "~2.3",
         "firebase/php-jwt": "dev-master",
         "geoip2/geoip2": "~2.0",
-        "facebook/graph-sdk": "^5.6"
+        "facebook/graph-sdk": "^5.6",
+        "aws/aws-sdk-php": "^3.36"
     }
 }
